Update index.html to include Tracking Map PDF

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h1>Choose an Option:</h1>
 
   <div class="button-container">
-    <a href="4PLmenu.net/tracking_map" class="button" target="_blank">Option 1</a>
+    <a href="https://github.com/MH-CW/4PLmenu.net/raw/main/4PL%20tracking%20map.pdf" class="button" target="_blank">Tracking Map</a>
     <a href="4PLmenu.net/multimodal_dispatch_form" class="button" target="_blank">Option 2</a>
   </div>
 
