--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h1>Consignment: 12345</h1>
 
   <div class="button-container">
-    <a href="https://github.com/MH-CW/4PLmenu.net/raw/main/4PL%20tracking%20map.pdf" class="button" target="_blank">Tracking Map</a>
+    <a href="https://docs.google.com/viewer?url="https://github.com/MH-CW/4PLmenu.net/raw/main/4PL%20tracking%20map.pdf"&embedded=true" class="button">Tracking Map</a>
     <a href="4PLmenu.net/multimodal_dispatch_form" class="button" target="_blank">Option 2</a>
   </div>
 
