--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Menu</title>
+  <title>4PL Menu</title>
   <style>
     body {
       font-family: sans-serif;
