--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </head>
 <body>
 
-  <h1>Consignment: 12345</h1>
+  <h1>Consignment - 12345</h1>
 
   <div class="button-container">
     <a href="https://docs.google.com/viewer?url=https://github.com/MH-CW/4PLmenu.net/raw/main/4PL%20tracking%20map.pdf&embedded=true" class="button">Tracking Map</a>
-    <a href="4PLmenu.net/multimodal_dispatch_form" class="button" target="_blank">Option 2</a>
+    <a href="https://docs.google.com/viewer?url=https://github.com/MH-CW/4PLmenu.net/blob/b97a32a301b5a5360ea6c7196d191d3e15523a2a/Multimodal%20Dispatch%20Form.pdf" class="button">Multimodal Dispatch Form</a>
   </div>
 
 </body>
