--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       font-family: sans-serif;
       text-align: center;
       margin: 20px;
-      background-color: black; /* Black background */
+      background-color: darkgray; /* Dark gray background */
       color: white; /* Make text readable against black */
     }
 
