--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   </div>
 
   <div class="button-container">
-    <a href="https://docs.google.com/viewer?url=https://github.com/MH-CW/4PLmenu.net/raw/main/4PL%20tracking%20map.pdf&embedded=true" class="button">Tracking Map</a>
-    <a href="https://docs.google.com/viewer?url=https://github.com/MH-CW/4PLmenu.net/raw/main/Multimodal%20Dispatch%20Form.pdf&embedded=true" class="button">Multimodal Dispatch Form</a>
+    <a href="https://github.com/MH-CW/4PLmenu.net/raw/main/4PL%20tracking%20map.pdf" class="button">Tracking Map</a>
+    <a href="https://github.com/MH-CW/4PLmenu.net/raw/main/Multimodal%20Dispatch%20Form.pdf" class="button">Multimodal Dispatch Form</a>
   </div>
 
 </body>
